--- a/styles/all/template/event/viewforum_body_topic_row_before.html
+++ b/styles/all/template/event/viewforum_body_topic_row_before.html
@@ -1,1 +1,3 @@
-{% include '@nekstati_quicktopic/quick_topic_box.html' %}
+{% if QT_FORUM_ID %}
+	{% include '@nekstati_quicktopic/quick_topic_box.html' %}
+{% endif %}
